--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,10 @@ dependencies {
 
     // GSON
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    // Google maps
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
 
+    // Location
+    implementation "com.google.android.gms:play-services-location:17.0.0"
 }
