--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.2.0'
     implementation 'com.google.firebase:firebase-database:19.2.0'
     implementation 'com.google.firebase:firebase-storage:19.1.0'
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
 }
